Bug 140552 - FILESAVE RTF After saving DOCX to RTF, reload gives File format error
Summary: FILESAVE RTF After saving DOCX to RTF, reload gives File format error
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0 target:7.1.2 target:7.0.6
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2021-02-20 11:38 UTC by Buovjaga
Modified: 2021-03-03 11:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2021-02-20 11:38:35 UTC
1. Open attachment 103815 [details]
2. Save as RTF, reload

File format error found at 3173,7 /home/user/libreoffice/writerfilter/source/rtftok/rtfdocumentimpl.cxx:816(row,col).

Bibisected with Linux bibisect-50max to
https://git.libreoffice.org/core/commit/7d42346ba77c9c4df241ea40eaf550993ca18783
tdf#90421 RTF export: ignore hyperlinks without an URL

Adding Cc: to Miklos Vajna
Comment 1 MM 2021-02-20 14:50:50 UTC
Confirmed on windows 10 x64 with Version: 7.0.5.1 (x64)
Build ID: 22aa6743f53547be737cebf9a34be16c35f90d6c
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Comment 2 Commit Notification 2021-03-02 07:39:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5a74baa4f033f84c4bbcec869a68eef149f77161

tdf#140552 RTF export: fix hyperlink, in footnote, in hyperlink

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2021-03-02 08:53:14 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 94283af977246c70dbed4452d197b003d8bb14b9
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 4 Commit Notification 2021-03-02 11:26:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/49dad315bb776a13e404578ffd239ca85d6869cb

tdf#140552 RTF export: fix hyperlink, in footnote, in hyperlink

It will be available in 7.1.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-03-03 11:16:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a4bdd833a252ed4d942e4478fc820f9f2ee725fe

tdf#140552 RTF export: fix hyperlink, in footnote, in hyperlink

It will be available in 7.0.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.